# cg

./: .clang-format  CMakeLists.txt
lab1/: CMakeLists.txt
lab1/circle/: Canvas.h  Drawing.h  main.cpp
lab1/initials/: LetterView.h  Model.h  View.h  main.cpp
lab1/kamaz/: Controller.h  Drawing.h  Model.h  View.h  main.cpp
lab10/: CMakeLists.txt  Gauss.h  main.cpp
lab10/buffer/: FrameBuffer.h  RenderBuffer.h
lab10/random/: Random.h
lab10/window/: Planets.h  Window.cpp  Window.h
lab2/: CMakeLists.txt
lab2/alchemy/: Controller.h  Element.h  Model.h  View.h  main.cpp
lab3/: CMakeLists.txt
lab3/tetris/: BaseWindow.h  main.cpp
lab3/tetris/controller/: Controller.h
lab3/tetris/model/: Model.h  Tetromino.h
lab3/tetris/view/: SoundView.h  View.h
lab4/: CMakeLists.txt
lab4/maze/: main.cpp
lab4/mesh/: BaseWindow.cpp  BaseWindow.h  DirectLight.cpp  Frame.cpp  Frame.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MobiusStrip.cpp  MobiusStrip.h  SincSurface.cpp  SincSurface.h  Surface.cpp  Surface.h  Window.cpp  Window.h  main.cpp
lab4/shape/: BaseWindow.h  Cube.cpp  DirectLight.h  GreatDodecahedron.cpp  GreatDodecahedron.h  Window.cpp  Window.h  main.cpp
lab5/: CMakeLists.txt
lab5/lib/: BaseWindow.cpp  Texture.h  TextureLoader.cpp
lab5/maze/: Maze.cpp  Maze.h  MazeScheme.h  Window.cpp  Window.h  main.cpp
lab5/memoryTrainer/: Window.cpp  Window.h  main.cpp
lab5/memoryTrainer/View/: TileView.h
lab5/memoryTrainer/model/: Model.h  Scheme.h
lab6/: CMakeLists.txt  main.cpp
lab6/3d/: Vector3.h  Vertex.h
lab6/3d/boundingBox/: BoundingBox.cpp  BoundingBox.h
lab6/3d/buffer/: Buffer.h  BufferObject.h
lab6/3d/material/: ModelMaterial.cpp  ModelMaterial.h
lab6/3d/mesh/: Mesh.cpp  Mesh.h
lab6/3d/model/: Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h
lab6/3d/modelLoader/: ModelLoader.cpp  ModelLoader.h
lab6/3d/render/: FieldRenderer.h  TankRenderer.h
lab6/3d/textureMap/: TextureMap.cpp  TextureMap.h
lab6/model/: Field.cpp  Field.h  FieldScheme.h  Point.h  Tank.h
lab6/window/: Window.cpp  Window.h
lab7/: CMakeLists.txt
lab7/canabola/: Canabola.h  Flag.h  MorphingObject.h  Tunnel.h  Window.cpp  Window.h  main.cpp
lab8/: CMakeLists.txt  architecture.drawio  main.cpp
lab8/buffer/: ColorBuffer.h  FrameBuffer.h  IColorBuffer.h
lab8/geometry/: GeometryObjectImpl.h  GeometryObjectWithInitialTransformImpl.h  IGeometryObject.h  Ray.h
lab8/geometry/intersection/: HitInfo.h  Intersection.h
lab8/geometry/vector/: Vector3.h  VectorMath.h
lab8/light/: ILightSource.h  LightSourceImpl.h  OmniLightSource.h
lab8/material/: SimpleMaterial.h
lab8/objects/: AABB.h  Metaball.h  Paraboloid.h  Plane.h  Sphere.h  Torus.h
lab8/random/: Random.h
lab8/render/: RaytraceView.cpp  RaytraceView.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  ViewPort.h
lab8/scene/: Scene.cpp  Scene.h
lab8/scene/sceneObject/: SceneObject.cpp  SceneObject.h
lab8/shader/: CheckerShader.h  IShader.h  PhongLightShader.h  ShadeContext.h  SimpleDiffuseShader.h
lab8/view/: RaytraceView.cpp  RaytraceView.h
lab8/window/: Window.cpp  Window.h
lib/SOIL/: SOIL.c  stb_image_aug.c  stbi_DDS_aug.h  stbi_DDS_aug_c.h
lib/glfwWindow/: BaseWindow.h  GLEWInitializer.h
lib/shaders/: Program.h
lib/texture/: SaveTextureToPNG.h  Texture.h  stb_image_write.h
lib/tinyobjloader/: tiny_obj_loader.h
